Explicit declare signedInUser that is used in the jsps